# winrar-command-builder

./: README.md  pyproject.toml
src/winrar_command_builder/: __init__.py  console_command.py  sfx_template.py  typedefs.py
src/winrar_command_builder/command_parts/: commands.py  sfx.py  switches.py
