[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winrar-command-builder"
version = "1.0.0"
authors = [
  { name="pschlo"},
]
description = "Simple tool to facititate the creation of WinRAR commands"
requires-python = ">=3.7"


[tool.hatch.build.targets.sdist]
# choose here what to include in sdist
# the wheel will only include src/number_conversion anyway
# see https://discuss.python.org/t/should-sdists-include-docs-and-tests/14578
# include = [ ]